--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>Tic-Tac-Toe</title>
 </head>
 <body>
+
+    <div class="main-container">
+
+    </div>
+
+    <div class="results-dialog">
+        
+    </div>
     
     <script src="script.js"></script>
 </body>
