Styled the HTML

--- a/index.html
+++ b/index.html
@@ -9,7 +9,17 @@
 <body>
 
     <div class="main-container">
-
+        <div class="game-container">
+            <div class="grid-cell"></div>
+            <div class="grid-cell"></div>
+            <div class="grid-cell"></div>
+            <div class="grid-cell"></div>
+            <div class="grid-cell"></div>
+            <div class="grid-cell"></div>
+            <div class="grid-cell"></div>
+            <div class="grid-cell"></div>
+            <div class="grid-cell"></div>
+        </div>
     </div>
 
     <div class="results-dialog">
