Added status message and Game's heading

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
 
     <div class="main-container">
+        <h1>Tic <span>Tac</span> Toe</h1>
         <div class="game-container">
             <div class="grid-cell">
                     <i class="fa-solid fa-xmark"></i>
@@ -57,6 +58,8 @@
             </div>
            
         </div>
+        <div class="statusText">my tuen</div>
+        <button class="restart-btn">Restart Game</button>
     </div>
 
     <div class="results-dialog">
