Addeed Restart Button

--- a/index.html
+++ b/index.html
@@ -59,7 +59,13 @@
            
         </div>
         <div class="statusText">my tuen</div>
-        <button class="restart-btn">Restart Game</button>
+        <button class="button-3d">
+            <div class="button-top">
+              <span class="material-icons">Restart</span>
+            </div>
+            <div class="button-bottom"></div>
+            <div class="button-base"></div>
+        </button>
     </div>
 
     <div class="results-dialog">
