Change PLayer functionality

--- a/index.html
+++ b/index.html
@@ -8,64 +8,22 @@
     <title>Tic-Tac-Toe</title>
 </head>
 <body>
-
+    
     <div class="main-container">
         <h1>Tic <span>Tac</span> Toe</h1>
         <div class="game-container">
-            <div class="grid-cell">
-                    <i class="fa-solid fa-xmark"></i>
-                    <i class="fa-solid fa-o"></i>
-            </div>
-
-            <div class="grid-cell">
-                    <i class="fa-solid fa-xmark"></i>
-                    <i class="fa-solid fa-o"></i>
-            </div>
-
-            <div class="grid-cell">
-                <i class="fa-solid fa-xmark"></i>
-                <i class="fa-solid fa-o"></i>
-            </div>
-
-            <div class="grid-cell">
-                <i class="fa-solid fa-xmark"></i>
-                <i class="fa-solid fa-o"></i>
-            </div>
-
-            <div class="grid-cell">
-                <i class="fa-solid fa-xmark"></i>
-                <i class="fa-solid fa-o"></i>
-            </div>
-
-            <div class="grid-cell">
-                <i class="fa-solid fa-xmark"></i>
-                <i class="fa-solid fa-o"></i>
-            </div>
-
-            <div class="grid-cell">
-                <i class="fa-solid fa-xmark"></i>
-                <i class="fa-solid fa-o"></i>
-            </div>
-
-            <div class="grid-cell">
-                <i class="fa-solid fa-xmark"></i>
-                <i class="fa-solid fa-o"></i>
-            </div>
-
-            <div class="grid-cell">
-                <i class="fa-solid fa-xmark"></i>
-                <i class="fa-solid fa-o"></i>
-            </div>
-           
+            <div class="grid-cell" cellIndex = "0"></div>
+            <div class="grid-cell" cellIndex = "1"></div>
+            <div class="grid-cell" cellIndex = "2"></div>
+            <div class="grid-cell" cellIndex = "3"></div>
+            <div class="grid-cell" cellIndex = "4"></div>
+            <div class="grid-cell" cellIndex = "5"></div>
+            <div class="grid-cell" cellIndex = "6"></div>
+            <div class="grid-cell" cellIndex = "7"></div>
+            <div class="grid-cell" cellIndex = "8"></div>      
         </div>
-        <div class="statusText">my tuen</div>
-        <button class="button-3d">
-            <div class="button-top">
-              <span class="material-icons">Restart</span>
-            </div>
-            <div class="button-bottom"></div>
-            <div class="button-base"></div>
-        </button>
+        <div class="statusText"></div>
+        <button class="restart-btn">Restart</button>
     </div>
 
     <div class="results-dialog">
